--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -7,14 +7,14 @@
 <body>
 <div style="padding:20px 100px 20px 20px" class="markdown-body">
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
-<h5 id="version-1-6">Version 1.6</h5>
+<h5 id="version-1-7">Version 1.7</h5>
 <p>Example Test Sheet:</p>
 <p><img src="example.PNG" ></p>
 <h4 id="the-basics-structure">The Basics - Structure</h4>
 <ul>
 <li>Define your <strong>Tests</strong> in a <strong>Sheet</strong> in an Excel file</li>
 <li>A <strong>Sheet</strong> uses the first column to define the <strong>Test Steps</strong> as a series of actions to perform in executing the <strong>Test</strong></li>
-<li><strong>Tests</strong> are then defined in the subsequent columns to the right of the Test Steps and define values to be used for each <strong>Test Step</strong></li>
+<li><strong>Tests</strong> or test iterations are then defined in the subsequent columns to the right of the Test Steps and define values to be used for each <strong>Test Step</strong></li>
 <li>You can use multiple <strong>Sheets</strong> to add structure to your tests. E.g. “Happy Days Paths”, “Error Cases”, etc</li>
 </ul>
 <h4 id="test-execution">Test Execution</h4>
@@ -34,12 +34,15 @@
 </ul>
 <p>Example Results Sheet </p>
 <p><img src="example2.PNG" >   </p>
-<h4 id="the-basics-test-steps-that-aren-t-really-steps-">The Basics - Test Steps (that aren’t really steps)</h4>
+<h4 id="the-basics">The Basics</h4>
 <ul>
 <li><strong>Enabled</strong> The first row always defines whether the test should be run or not allows tests to be commented out easily: [true|false]</li>
-<li><strong>Comments</strong> Steps whose name starts with a <code>//</code> are ignored at execution time - these allow you to add columns for commenting your tests</li>
+<li><strong>Commenting Steps</strong> Steps whose name starts with a <code>//</code> are ignored at execution time - these allow you to add columns for commenting your tests</li>
+<li><strong>Commenting Sheets/Tabs</strong> Whole sheets (tabs) can be disabled by commenting out the sheet by simply prefixing the sheet name with a <code>--</code></li>
+<li><strong>Recommended rows</strong> It is recommended to include a <code>Name</code> and <code>Description row</code> at the top of your file. These will be ignored but help make scripts understandable  </li>
+<li><strong> Excel Built in Formulas</strong> Sc-Test supports the use of most common Excel built in Formulas (via the apache POI library) for an indication of the formulas supported see: <a href="http://poi.apache.org/spreadsheet/eval-devguide.html#appendixA">http://poi.apache.org/spreadsheet/eval-devguide.html#appendixA</a></li>
 </ul>
-<h4 id="the-basics-test-steps">The Basics - Test Steps</h4>
+<h4 id="test-steps">Test Steps</h4>
 <p>Steps follow the form:</p>
 <p><code>page : action : detail : locatingAttribute : locatingAttributeValue</code>
 <br/> (Note the above includes spaces for illustration only)</p>
@@ -73,7 +76,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page0:nav:url:-:-</td>
+        <td>homePage:nav:url:-:-</td>
         <td><a href="http://my.site.com">http://my.site.com</a></td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -83,7 +86,12 @@
 
 <ul>
 <li>Value: any valid URL</li>
-<li>Action: nav</li>
+<li>Action:<ul>
+<li>nav - default</li>
+<li>nav_confTrue - expects a confirmation popup and confirms</li>
+<li>nav_confFalse - expects a confirmation popup and declines</li>
+</ul>
+</li>
 <li>Detail: url    </li>
 <li>Locating Attribute: -</li>
 <li>Locating Attribute Value: -</li>
@@ -93,7 +101,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:nav:button:id:Login</td>
+        <td>homePage:nav:button:id:Login</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -101,7 +109,12 @@
 
 <ul>
 <li>Value: <code>-</code></li>
-<li>Action: nav    </li>
+<li>Action:<ul>
+<li>nav - default</li>
+<li>nav_confTrue - expects a confirmation popup and confirms</li>
+<li>nav_confFalse - expects a confirmation popup and declines</li>
+</ul>
+</li>
 <li>Detail: button    </li>
 <li>Locating Attribute: Any attribute of the <code>&lt;button&gt;</code>web element </li>
 <li>Locating Attribute Value: Value of the attribute specified in <code>Locating Attribute</code></li>
@@ -111,7 +124,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page2:nav:a:href:/accounts/create</td>
+        <td>homePage:nav:a:href:/accounts/create</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -121,7 +134,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page2:nav:a:text:Accounts</td>
+        <td>homePage:nav:a:text:Accounts</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -131,7 +144,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page2:nav:a:text:-</td>
+        <td>homePage:nav:a:text:-</td>
         <td>$LINK_TEXT</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -151,8 +164,15 @@
 </li>
 </ul>
 </li>
-<li>Action: nav    </li>
-<li>Detail: a    </li>
+<li><p>Action: </p>
+<ul>
+<li>nav - default</li>
+<li>nav_confTrue - expects a confirmation popup and confirms</li>
+<li>nav_confFalse - expects a confirmation popup and declines</li>
+</ul>
+</li>
+<li><p>Detail: a    </p>
+</li>
 <li>Locating Attribute: Any attribute of the <code>&lt;a&gt;</code>web element OR <code>text</code></li>
 <li>Locating Attribute Value: Value of the attribute specified in <code>Locating Attribute</code> or the text of the link where text is used as the <code>Location Attribute</code> or <code>-</code> where link text is specifed in Value</li>
 </ul>
@@ -168,7 +188,7 @@
     </tr>
 
     <tr>
-        <td>page1:enter:input:id:username</td>
+        <td>homePage:enter:input:id:username</td>
         <td>myUserName</td>
     </tr>
 
@@ -178,12 +198,12 @@
     </tr>
 
     <tr>
-        <td>page1:enter:input:id:age</td>
+        <td>homePage:enter:input:id:age</td>
         <td>%BLANK%</td>
     </tr>
 
     <tr>
-        <td>page1:enter:input:id:age</td>
+        <td>homePage:enter:input:id:age</td>
         <td>35</td>
     </tr>
 
@@ -207,7 +227,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page4:enter:textarea:name:address</td>
+        <td>homePage:enter:textarea:name:address</td>
         <td>10,School Lane</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -229,7 +249,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:enter:select:id:salutation</td>
+        <td>homePage:enter:select:id:salutation</td>
         <td>Dr</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -250,7 +270,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page7:enter:radio:name:myRadioButton</td>
+        <td>homePage:enter:radio:name:myRadioButton</td>
         <td>Coffee</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -271,7 +291,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page2:enter:checkbox:name:hasCar</td>
+        <td>homePage:enter:checkbox:name:hasCar</td>
         <td>true</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -292,7 +312,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page3:submit:form:name:new</td>
+        <td>homePage:submit:form:name:new</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -301,17 +321,22 @@
 
 <ul>
 <li>Value: <code>-</code></li>
-<li>Action: enter    </li>
-<li>Detail: radio</li>
-<li>Locating Attribute: name</li>
-<li>Locating Attribute Value: Value of the name attribute</li>
+<li>Action:<ul>
+<li>submit  - default</li>
+<li>sbmit_confTrue - expects a confirmation popup and confirms</li>
+<li>submit_confFalse - expects a confirmation popup and declines</li>
+</ul>
+</li>
+<li>Detail: form</li>
+<li>Locating Attribute: Name of the attribute to identify the element in question</li>
+<li>Locating Attribute Value: Value of the location attribute</li>
 </ul>
 <h4 id="checking-values-">Checking values:</h4>
 <p>Used to assert that an expected value is actually present in a given web element. </p>
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page3:check:span:id:totalChargeable</td>
+        <td>homePage:check:span:id:totalChargeable</td>
         <td>512.76</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -354,7 +379,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page3:print:span:id:PolicyReference</td>
+        <td>homePage:print:span:id:PolicyReference</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -364,7 +389,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page3:print:span:id:PolicyReference</td>
+        <td>homePage:print:span:id:PolicyReference</td>
         <td>$POLICY_REFERENCE</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -396,7 +421,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page3:print:td:xpath://*[@id=”Name_ileinner”]</td>
+        <td>homePage:print:td:xpath://*[@id=”Name_ileinner”]</td>
         <td>$POLICY_REFERENCE</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -411,7 +436,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>Page1:code:setVar:$MY_VAR:-</td>
+        <td>homePage:code:setVar:$MY_VAR:-</td>
         <td>554tTTK</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -424,23 +449,50 @@
 <li>Locating Attribute: name of the variable to set including the leading $ e.g. SMY_VAR </li>
 <li>Locating Attribute Value: Value of the name attribute</li>
 </ul>
-<h4 id="ajax">Ajax</h4>
-<p>Waits for any remaining ajax activities going on on the page before proceeding. Preferable to sleep!</p>
+<h3 id="waiting">Waiting</h3>
+<h4 id="waiting-for-elements-to-be-visible-and-enabled">Waiting For Elements to be Visible and Enabled</h4>
+<p>** NB this has a timeout period of 120 seconds unlike all other steps which timeout if not completed after 30 seconds</p>
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>DocComplete:waitForAjax:-:-:-:</td>
+        <td>homePage:waitForElement:div:id:myDelayedDiv</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
 </table>
 
+<ul>
+<li>Value: -</li>
+<li>Action: waitForElement</li>
+<li>Detail: type of element you are waiting to be displayed and enabled e.g.<ul>
+<li>Div</li>
+<li>Input</li>
+<li>Button</li>
+<li>Span</li>
+</ul>
+</li>
+<li>Locating Attribute: Any attribute of the element used to identify the element in question</li>
+<li>Locating Attribute Value: value of the element specified in Locating Attribute</li>
+</ul>
+<h4 id="waiting-for-ajax-requests-to-complete">Waiting for Ajax requests to complete</h4>
+<p>Waits for any remaining ajax activities going on on the page before proceeding. Preferable to sleep!</p>
+<table>
+    <tr><td></td><td></td></tr>
+    <tr>
+        <td>homePage:waitForAjax:-:-:-:</td>
+        <td>-</td>
+    </tr>
+    <tr><td></td><td></td></tr>
+</table>
 
-
-
-
-
-<h4 id="forced-sleeps">Forced Sleeps</h4>
+<ul>
+<li>Value: -</li>
+<li>Action: waitForAjax</li>
+<li>Detail: -</li>
+<li>Locating Attribute: -</li>
+<li>Locating Attribute Value: -</li>
+</ul>
+<h4 id="waiting-for-defined-periods-sleeps">Waiting for defined periods - Sleeps</h4>
 <p>Simply pauses the execution of the test steps for a defined period</p>
 <table>
     <tr><td></td><td></td></tr>
@@ -453,17 +505,17 @@
 
 <ul>
 <li>Value: number of milliseconds to wait for</li>
-<li>Action: enter    </li>
-<li>Detail: radio</li>
-<li>Locating Attribute: name</li>
-<li>Locating Attribute Value: Value of the name attribute</li>
+<li>Action: sleep    </li>
+<li>Detail: -</li>
+<li>Locating -</li>
+<li>Locating -</li>
 </ul>
 <h4 id="ignoring-steps">Ignoring steps</h4>
 <p>If you wish a test to ignore a step of any type simply replace the value with. This can be useful for defining different paths through a series of test steps</p>
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:enter:input:id:username</td>
+        <td>homePage:enter:input:id:username</td>
         <td>%IGNORE%</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -476,7 +528,7 @@
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:enter:input:id:username</td>
+        <td>homePage:enter:input:id:username</td>
         <td>%STOP%</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -522,7 +574,7 @@ For a random alpha of 2 characters:<br/>
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:enter:input:id:email</td>
+        <td>homePage:enter:input:id:email</td>
         <td>%RANDOM_NUMERIC_8%@%RANDOM_ALPHA_2%.com</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -530,7 +582,7 @@ For a random alpha of 2 characters:<br/>
 
 
 
-<h4 id="iframes">IFrames</h4>
+<h4 id="working-with-iframes">Working with IFrames</h4>
 <p>If you need to test a page that sits within an iframe of a parent page you must specify that the element is in the iframe. This is done by defining the name of the IFrame to be used as a suffix to your page name and seperated by the <code>~</code> sign. Note this works for any step. 
 For example</p>
 <table>
@@ -611,11 +663,12 @@ This is done in a similar way to working with IFrames and requires the <code>Tit
 
 
 <h4 id="including-tests-in-tests">Including Tests in Tests</h4>
-<p>You can write tests which you can include in other tests</p>
+<p>You can write tests which you can include in other tests. </p>
+<p>NB - current limitation is only a single layer of includes is possible i.e. you can’t include tests that in turn include other tests</p>
 <table>
     <tr><td></td><td></td></tr>
     <tr>
-        <td>page1:include:./resources/test/regression_include.xlsx:core_data:Core_2_Data_Entry_1</td>
+        <td>homePage:include:./resources/test/regression_include.xlsx:core_data:Core_2_Data_Entry_1</td>
         <td>-</td>
     </tr>
     <tr><td></td><td></td></tr>
@@ -627,6 +680,49 @@ This is done in a similar way to working with IFrames and requires the <code>Tit
 <li>Detail: file containing the included test</li>
 <li>Locating Attribute: Sheet name containing the included test</li>
 <li>Locating Attribute Value: Name of the test to include</li>
+</ul>
+<h3 id="setup-and-installation">Setup and Installation</h3>
+<p>To install, simply unpack the release to a directory on your system. This will give you the following structure for example:</p>
+<pre><code>sc-test-1.7
+   |
+    &gt; bin
+    &gt; lib
+</code></pre><p>To run open a command prompt and execute: <code>sc-test-1.7\bin\sc-test fileToTest.xlsx env</code></p>
+<p>Where <code>env</code> is used to resolve any environment specific test steps</p>
+<p>NB: If you add the bin directory to your path you can run sc-test from anywhere</p>
+<ul>
+<li>You should not need to install the Firefox driver (though see notes below about setting up a test profile)</li>
+<li>You may need to install the Chrome selenium driver and ensure it is on your path</li>
+<li>You will almost certainly need to install the IE selenium driver and ensure it is on your path (note IE driver is much slower than ff and chrome)</li>
+</ul>
+<h4 id="browser-config">Browser Config</h4>
+<h5 id="firefox">Firefox</h5>
+<p>Its best to create a Firefox profile for automated testing:</p>
+<ol>
+<li>create a ff profile by first closing down all firefox instances and processes</li>
+<li>run <code>firefox.exe -p</code></li>
+<li>create the profile called <code>AUTO_TESTING</code> as that is the name of the profile SC-Test will look for</li>
+</ol>
+<p>Using NTLM with Firefox</p>
+<ol>
+<li>to configure your profile, run FF as the new profile</li>
+<li>in the address bar type “about:config” and accept warnings</li>
+<li>Type “Proxy” in the search field</li>
+<li>Make sure “signon.autologin.proxy” is set “true” (By default it is “false”)</li>
+<li><p>Now type type the following “network.automatic-ntlm-auth.trusted-uris” in the filter
+g. Double click the name of the preference
+h. Enter the URLs of the sites you wish to allow NTLM passthrough for (comma seperated) in the form of:</p>
+<p> <a href="http://intranet.company.com,http://email.company.lan">http://intranet.company.com,http://email.company.lan</a></p>
+</li>
+</ol>
+<h3 id="changelog">ChangeLog</h3>
+<h4 id="v1-7">v1.7</h4>
+<p> (For details see the main documentation for the relevant test step)</p>
+<ul>
+<li>New: WaitForElement</li>
+<li>New: Support for commenting out entire sheets by prefixing the sheet name with <code>--</code></li>
+<li>New: support of formulas in Excel sheets <a href="http://poi.apache.org/spreadsheet/eval-devguide.html#appendixA">http://poi.apache.org/spreadsheet/eval-devguide.html#appendixA</a></li>
+<li>New: support for confrimation dialogs on Nav and Submit test steps</li>
 </ul>
 
 </div)
