--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -7,7 +7,7 @@
 <body>
 <div style="padding:20px 100px 20px 20px" class="markdown-body">
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
-<h5 id="version-1-7">Version 1.7</h5>
+<h5 id="version-1-8">Version 1.8</h5>
 <p>Example Test Sheet:</p>
 <p><img src="example.PNG" ></p>
 <h4 id="the-basics-structure">The Basics - Structure</h4>
@@ -716,6 +716,12 @@ h. Enter the URLs of the sites you wish to allow NTLM passthrough for (comma sep
 </li>
 </ol>
 <h3 id="changelog">ChangeLog</h3>
+<h4 id="v1-8">v1.8</h4>
+<ul>
+<li>Fix: WaitForElement was only working for input elements, fixed for any web element.</li>
+<li>Fix: Summary generation sometimes throws an exception and the result spreadsheet isn’t saved on disk.</li>
+<li>Improvement: Speed improvements for check and print operations.</li>
+</ul>
 <h4 id="v1-7">v1.7</h4>
 <p> (For details see the main documentation for the relevant test step)</p>
 <ul>
