Updated sc-test docs for version 1.9

--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -7,7 +7,7 @@
 <body>
 <div style="padding:20px 100px 20px 20px" class="markdown-body">
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
-<h5 id="version-1-8">Version 1.8</h5>
+<h5 id="version-1-9">Version 1.9</h5>
 <p>Example Test Sheet:</p>
 <p><img src="example.PNG" ></p>
 <h4 id="the-basics-structure">The Basics - Structure</h4>
@@ -716,6 +716,11 @@ h. Enter the URLs of the sites you wish to allow NTLM passthrough for (comma sep
 </li>
 </ol>
 <h3 id="changelog">ChangeLog</h3>
+<h4 id="v1-9">v1.9</h4>
+<ul>
+<li>Fix: Formulas in included files not working.</li>
+<li>Fix: ID selector was failing for div’s and input’s on some pages (bug introduced on v1.8).</li>
+</ul>
 <h4 id="v1-8">v1.8</h4>
 <ul>
 <li>Fix: WaitForElement was only working for input elements, fixed for any web element.</li>
