--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>SCS Test Docs</title>
-<link rel="stylesheet" type="text/css" href="/css/github_markdown.css">
+<link rel="stylesheet" type="text/css" href="/css/gollum_template.css">
 </head>
 <body>
-<div style="padding:20px 100px 20px 20px" class="markdown-body">
+<div class="markdown-body">
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
-<h5 id="version-1-9">Version 1.9</h5>
+<h5 id="version-1-9-1">Version 1.9.1</h5>
 <p>Example Test Sheet:</p>
 <p><img src="example.PNG" ></p>
 <h4 id="the-basics-structure">The Basics - Structure</h4>
@@ -716,6 +716,13 @@ h. Enter the URLs of the sites you wish to allow NTLM passthrough for (comma sep
 </li>
 </ol>
 <h3 id="changelog">ChangeLog</h3>
+<h4 id="v1-9-1">v1.9.1</h4>
+<ul>
+<li>Fixed really odd issue whereby accessing visible inputs was timing out</li>
+<li>Fixed bug where formulas in imported tests were not working reliably</li>
+<li>An “Intermediate” output file now show the state of the spreadsheet created before its executed. It is of the form “regression_exe_Jun_30_08.47.xlsx”</li>
+<li>Cleaned up debug </li>
+</ul>
 <h4 id="v1-9">v1.9</h4>
 <ul>
 <li>Fix: Formulas in included files not working.</li>
