Rolled back odd template change.

--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>SCS Test Docs</title>
-<link rel="stylesheet" type="text/css" href="/css/gollum_template.css">
+<link rel="stylesheet" type="text/css" href="/css/github_markdown.css">
 </head>
 <body>
-<div class="markdown-body">
+<div style="padding:20px 100px 20px 20px" class="markdown-body">
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
 <h5 id="version-1-9-1">Version 1.9.1</h5>
 <p>Example Test Sheet:</p>
